syntax = "proto3";

package wasmapp.interquery;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "wasmapp/interquery/params.proto";
import "google/protobuf/any.proto";

option go_package = "wasmapp/x/interquery/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/wasmapp/interquery/params";
  
  }
  
  // Queries a list of IcqState items.
  rpc QueryIcqState (QueryIcqStateRequest) returns (QueryIcqStateResponse) {
    option (google.api.http).get = "/wasmapp/interquery/query_icq_state";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryIcqStateRequest {
  uint64 sequence = 1;
}

message QueryIcqStateResponse {
  google.protobuf.Any request = 1 [(gogoproto.nullable) = false];
  google.protobuf.Any response = 2 [(gogoproto.nullable) = true];
}

